load and connect to socket.io client

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+
+    <!-- loads & connects the socket.io-client -->
+    <script src='/socket.io/socket.io.js'></script>
+    <script>
+      var socket = io();
+    </script>
   </body>
 </html>
