--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
     <script src='/socket.io/socket.io.js'></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
+
       var socket = io();
+
       $('form').submit(function() {
         socket.emit('chat message', $('#m').val()); // note: you may send/receive any events you want, any data you want, incl JSON and binary data (may need to be encoded)
         $('#m').val('');
         return false; // Q: why r we returning false?
       });
+
+      socket.on('chat message', function(msg) {
+        $('#messages').append($('<li>').text(msg));
+      });
+
     </script>
   </body>
 </html>
